Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1477

Pending COMMIT message for failed write operation can prevent tablet startup

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 0.9.0
    • 0.9.1, 0.10.0
    • tablet
    • None

    Description

      I had a workload running which generated a lot of writes for duplicate keys. In this case, a commit message only has bad statuses, and no mutated stores. This triggers the following code path:

            if (entry.second->commit().op_type() == WRITE_OP &&
                !AreAnyStoresActive(entry.second->commit())) {
              DumpReplayStateToLog(state);
              TabletSuperBlockPB super;
              WARN_NOT_OK(meta_->ToSuperBlock(&super), "Couldn't build TabletSuperBlockPB.");
              return Status::Corruption(Substitute("CommitMsg was pending but it did not refer "
                  "to any active memory stores. Commit: $0. TabletMetadata: $1",
                  entry.second->commit().ShortDebugString(), super.ShortDebugString()));
            }
      

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: